#805 - Changing readme :)